--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -97,9 +97,12 @@
     </Compile>
     <Compile Include="Analysis\Standard\StandardTokenizerImpl.cs" />
     <Compile Include="Analysis\Standard\StandardTokenizerInterface.cs" />
+    <Compile Include="Analysis\Standard\Std31\StandardTokenizerImpl31.cs" />
     <Compile Include="Analysis\Standard\Std31\UAX29URLEmailTokenizerImpl31.cs" />
+    <Compile Include="Analysis\Standard\Std34\StandardTokenizerImpl34.cs" />
     <Compile Include="Analysis\Standard\Std34\UAX29URLEmailTokenizerImpl34.cs" />
     <Compile Include="Analysis\Standard\Std36\UAX29URLEmailTokenizerImpl36.cs" />
+    <Compile Include="Analysis\Standard\Std40\StandardTokenizerImpl40.cs" />
     <Compile Include="Analysis\Standard\Std40\UAX29URLEmailTokenizerImpl40.cs" />
     <Compile Include="Analysis\Standard\UAX29URLEmailAnalyzer.cs">
       <SubType>Code</SubType>
