--- a/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
+++ b/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
@@ -589,6 +589,7 @@
     <Compile Include="core\Util\TestTimSorter.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Util\TestToStringUtils.cs" />
     <Compile Include="core\Util\TestUnicodeUtil.cs">
       <SubType>Code</SubType>
     </Compile>
