--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Analysis\Miscellaneous\PrefixAndSuffixAwareTokenFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\PrefixAwareTokenFilter.cs" />
     <Compile Include="Analysis\Reverse\ReverseStringFilter.cs" />
+    <Compile Include="Analysis\Reverse\ReverseStringFilterFactory.cs" />
     <Compile Include="Analysis\Standard\ClassicAnalyzer.cs" />
     <Compile Include="Analysis\Standard\ClassicFilter.cs">
       <SubType>Code</SubType>
