Ported Analysis.En + tests

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -74,6 +74,26 @@
     <Compile Include="Analysis\Cz\CzechStemFilter.cs" />
     <Compile Include="Analysis\Cz\CzechStemFilterFactory.cs" />
     <Compile Include="Analysis\Cz\CzechStemmer.cs" />
+    <Compile Include="Analysis\En\EnglishAnalyzer.cs" />
+    <Compile Include="Analysis\En\EnglishMinimalStemFilter.cs" />
+    <Compile Include="Analysis\En\EnglishMinimalStemFilterFactory.cs" />
+    <Compile Include="Analysis\En\EnglishMinimalStemmer.cs" />
+    <Compile Include="Analysis\En\EnglishPossessiveFilter.cs" />
+    <Compile Include="Analysis\En\EnglishPossessiveFilterFactory.cs" />
+    <Compile Include="Analysis\En\KStemData1.cs" />
+    <Compile Include="Analysis\En\KStemData2.cs" />
+    <Compile Include="Analysis\En\KStemData3.cs" />
+    <Compile Include="Analysis\En\KStemData4.cs" />
+    <Compile Include="Analysis\En\KStemData5.cs" />
+    <Compile Include="Analysis\En\KStemData6.cs" />
+    <Compile Include="Analysis\En\KStemData7.cs" />
+    <Compile Include="Analysis\En\KStemData8.cs" />
+    <Compile Include="Analysis\En\KStemFilter.cs" />
+    <Compile Include="Analysis\En\KStemFilterFactory.cs" />
+    <Compile Include="Analysis\En\KStemmer.cs" />
+    <Compile Include="Analysis\En\PorterStemFilter.cs" />
+    <Compile Include="Analysis\En\PorterStemFilterFactory.cs" />
+    <Compile Include="Analysis\En\PorterStemmer.cs" />
     <Compile Include="Analysis\Miscellaneous\ASCIIFoldingFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\ASCIIFoldingFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\CapitalizationFilter.cs" />
