--- a/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
+++ b/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
@@ -76,6 +76,13 @@
     <Compile Include="Analysis\Cz\TestCzechAnalyzer.cs" />
     <Compile Include="Analysis\Cz\TestCzechStemFilterFactory.cs" />
     <Compile Include="Analysis\Cz\TestCzechStemmer.cs" />
+    <Compile Include="Analysis\En\TestEnglishAnalyzer.cs" />
+    <Compile Include="Analysis\En\TestEnglishMinimalStemFilter.cs" />
+    <Compile Include="Analysis\En\TestEnglishMinimalStemFilterFactory.cs" />
+    <Compile Include="Analysis\En\TestKStemFilterFactory.cs" />
+    <Compile Include="Analysis\En\TestKStemmer.cs" />
+    <Compile Include="Analysis\En\TestPorterStemFilter.cs" />
+    <Compile Include="Analysis\En\TestPorterStemFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\TestASCIIFoldingFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\TestCapitalizationFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\TestCapitalizationFilterFactory.cs" />
@@ -124,6 +131,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Analysis\En\porterTestData.zip" />
+    <EmbeddedResource Include="Analysis\En\kstemTestData.zip" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
