Ported TestLengthFilter, TestLengthFilterFactory + tests

--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Analysis\Miscellaneous\KeywordMarkerFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\KeywordRepeatFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\KeywordRepeatFilterFactory.cs" />
+    <Compile Include="Analysis\Miscellaneous\LengthFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\LengthFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\LimitTokenCountAnalyzer.cs" />
     <Compile Include="Analysis\Miscellaneous\LimitTokenCountFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\LimitTokenPositionFilter.cs" />
