--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -111,7 +111,9 @@
     <Compile Include="Analysis\Miscellaneous\LengthFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\LimitTokenCountAnalyzer.cs" />
     <Compile Include="Analysis\Miscellaneous\LimitTokenCountFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\LimitTokenCountFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\LimitTokenPositionFilter.cs" />
+    <Compile Include="Analysis\Miscellaneous\LimitTokenPositionFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\Lucene47WordDelimiterFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\PatternKeywordMarkerFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\PerFieldAnalyzerWrapper.cs" />
