--- a/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
+++ b/src/Lucene.Net.Analysis.Common/Lucene.Net.Analysis.Common.csproj
@@ -124,6 +124,16 @@
     <Compile Include="Analysis\Miscellaneous\WordDelimiterFilter.cs" />
     <Compile Include="Analysis\Miscellaneous\WordDelimiterFilterFactory.cs" />
     <Compile Include="Analysis\Miscellaneous\WordDelimiterIterator.cs" />
+    <Compile Include="Analysis\Ngram\EdgeNGramFilterFactory.cs" />
+    <Compile Include="Analysis\Ngram\EdgeNGramTokenFilter.cs" />
+    <Compile Include="Analysis\Ngram\EdgeNGramTokenizer.cs" />
+    <Compile Include="Analysis\Ngram\EdgeNGramTokenizerFactory.cs" />
+    <Compile Include="Analysis\Ngram\Lucene43EdgeNGramTokenizer.cs" />
+    <Compile Include="Analysis\Ngram\Lucene43NGramTokenizer.cs" />
+    <Compile Include="Analysis\Ngram\NGramFilterFactory.cs" />
+    <Compile Include="Analysis\Ngram\NGramTokenFilter.cs" />
+    <Compile Include="Analysis\Ngram\NGramTokenizer.cs" />
+    <Compile Include="Analysis\Ngram\NGramTokenizerFactory.cs" />
     <Compile Include="Analysis\Pattern\PatternCaptureGroupFilterFactory.cs" />
     <Compile Include="Analysis\Pattern\PatternCaptureGroupTokenFilter.cs" />
     <Compile Include="Analysis\Pattern\PatternReplaceCharFilter.cs" />
